--- a/SQLZO/stylee.css
+++ b/SQLZO/stylee.css
@@ -10,6 +10,10 @@ body{
     background-color: #76885B;
 }
 
+
 .orden{
-    background-color: #627254;
+    margin: 100px;
+    text-align: center;
+    background-color: #EEEEEE;
+    
 }
